	Added preferences to SimplePortrayal2D
	Console and SimpleController possibly call init(...) inside an invokeAndWait to 
		guarantee it happens on the Swing Event Thread.
	Additions to ChartGenerator.  Thanks to Paul Smaldino <paul.smaldino@gmail.com> and
		Joey Harrison <jharri@gmu.edu>
	Set up make dist to automatically remove sim/util/datacul
	Added the sim/util/distribution package
	Added Prefs class -- oops
	Added a 'seed' variable to SimState -- basically retaining the seed used to construct
		the random number generator.  This is only used for the GUI to know what the
		seed was so it can display it in the Console.  Also modified the Console so
		that startSimulation() doesn't replace the generator.  The generator is only
		replaced if the user changes the number if the field or if the stop() button
		is pressed thus incrementing the field.  This allows easy visualization of
		a simulation with a specific predefined random number generator seed.  All you
		have to do is change the constructor of your GUIState subclass so that it
		creates the model with a fixed seed and the visualization will see it also.
		For example, public FlockersWithUI() { super(new Flockers(15)); }
	Modified the seed field in the Console to accept a long, but warn the user that
		a long seed was provided.
	Bug fixes to Bag.toArray(Object[]), which was returning null incorrectly.  Thanks to
		Matt Miller <matt.miller@gmail.com>
	Made all distribution classes serializable and removed their clone methods, which
		were not safe.  Who made these clonable in the first place?  
	Added sim/util/datacull/README
	Set the binary flag on certain binary files in the CVS repository, oops
	exceptions thrown in init() now have their stack traces printed out
	Fixed bug in FacetedPortrayal, wasn't handling hitObjects and setSelected right
	Added no-backdrop option to saving to PDF
	Added initial ParallelSequence revision which allows arbitrary numbers of threads
		divvying up all the steppables